Project Bank_DB {
  database_type: 'PostgreSQL'
  Note: '''
    # Bank Database
  '''
}

Table "accounts" {
  "id" bigserial [pk, not null]
  "owner" varchar [not null]
  "balance" bigint [not null]
  "currency" varchar [not null]
  "created_at" timestamp [not null, default: `now()`]

Indexes {
  owner
  (owner, currency) [unique]
}
}

Table "entries" {
  "id" bigserial [pk, not null]
  "account_id" bigint [not null]
  "amount" bigint [not null, note: 'can be negative or positive']
  "created_at" timestamp [not null, default: `now()`]

Indexes {
  account_id
}
}

Table "transfers" {
  "id" bigserial [pk, not null]
  "from_account_id" bigint [not null]
  "to_account_id" bigint [not null]
  "amount" bigint [not null, note: 'must be positive']
  "created_at" timestamp [not null, default: `now()`]

Indexes {
  from_account_id
  to_account_id
  (from_account_id, to_account_id)
}
}

Table "users" {
  "username" varchar [pk, not null]
  "hashed_password" varchar [not null]
  "full_name" varchar [not null]
  "email" varchar [unique, not null]
  "password_changed_at" timestamp [not null, default: "0001-01-01 00:00:00Z"]
  "created_at" timestamp [not null, default: `now()`]
}

Table "sessions" {
  "id" uuid [pk]
  "username" varchar [not null]
  "refresh_token" varchar [not null]
  "user_agent" varchar [not null]
  "client_ip" varchar [unique, not null]
  "is_blocked" boolean [not null, default: false]
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
}

Ref:"accounts"."id" < "entries"."account_id"

Ref:"accounts"."id" < "transfers"."from_account_id"

Ref:"accounts"."id" < "transfers"."to_account_id"

Ref:"users"."username" < "accounts"."owner"

Ref:"users"."username" < "sessions"."username"
